--- a/client/site.jade
+++ b/client/site.jade
@@ -118,6 +118,7 @@ template(name='site_page')
                                     +doc_emotion_small
                                         // .ui.label user_id #{user_id}
                 .three.wide.column
+                    +comments
                     .ui.small.list.mobile.hidden
                         a.item(href=site_url target="_window")
                             |#{site_url}
