--- a/client/watson.jade
+++ b/client/watson.jade
@@ -302,37 +302,37 @@ template(name='watson_full')
     div 
     if categories
         i.grey.cubes.icon(title='categories')
-        |categories
+        // |categories
         each categories
             .ui.small.basic.pointer.add_stack_tag.tertiary.button #{this}    
     div 
     if Person 
         i.grey.users.icon
-        .ui.inline.small.grey.header people
+        // .ui.inline.small.grey.header people
         each Person 
             .ui.small.basic.pointer.add_stack_tag.tertiary.button.pick_person #{this}
     div 
     if Company
         i.grey.briefcase.icon(title='company')
-        .ui.inline.small.grey.header companies
+        // .ui.inline.small.grey.header companies
         each Company 
             .ui.small.basic.pointer.add_stack_tag.tertiary.button.pick_company #{this}
     div 
     if TelevisionShow
         i.grey.video.icon(title='television show')
-        .ui.inline.small.grey.header television show
+        // .ui.inline.small.grey.header television show
         each TelevisionShow 
             .ui.small.basic.pointer.add_stack_tag.tertiary.button #{this}
     div 
     if Broadcaster
         i.grey.video.icon(title='broadcaster')
-        .ui.inline.small.grey.header broadcaster
+        // .ui.inline.small.grey.header broadcaster
         each Broadcaster 
             .ui.small.basic.pointer.add_stack_tag.tertiary.button #{this}
     div 
     if Facility
         i.grey.building.icon(title='facility')
-        .ui.inline.small.grey.header facilities
+        // .ui.inline.small.grey.header facilities
         each Facility 
             .ui.small.basic.pointer.add_stack_tag.tertiary.button #{this}
     div 
@@ -344,7 +344,7 @@ template(name='watson_full')
     div 
     if Organization
         i.grey.users.icon
-        .ui.inline.small.grey.header organizations
+        // .ui.inline.small.grey.header organizations
         each Organization 
             .ui.small.basic.pointer.add_stack_tag.tertiary.button #{this}
     div 
@@ -355,7 +355,7 @@ template(name='watson_full')
     div 
     if Location
         i.grey.marker.icon
-        .ui.inline.small.grey.header locations
+        // .ui.inline.small.grey.header locations
         each Location 
             .ui.small.basic.pointer.add_stack_tag.tertiary.button.pick_location #{this}
     div 
@@ -372,10 +372,10 @@ template(name='watson_full')
     //     div
     //- .large-text    
     //-     |!{body}
-    .ui.inline.small.grey.header concepts
+    // .ui.inline.small.grey.header concepts
     each watson_concepts
         .ui.tiny.basic.pointer.add_stack_tag.tertiary.button #{this}
-    .ui.inline.small.grey.header keywords
+    // .ui.inline.small.grey.header keywords
     each watson_keywords
         .ui.tiny.basic.pointer.add_stack_tag.tertiary.button #{this}
     // |#{ups}
