hide big logo in mobile, working almost correct user_tag_agg omega method call and show without user filter

--- a/client/site.jade
+++ b/client/site.jade
@@ -5,7 +5,7 @@ template(name='site_page')
                 .three.wide.right.aligned.column
                     // a.ui.circular.icon.button(href='/')
                     //     i.large.home.icon
-                    img.get_info(src=high_resolution_icon_url )
+                    img.get_info.mobile.hidden(src=high_resolution_icon_url )
                     img.get_info(src=logo_url )
                     // img(src=icon_url)
                     // .ui.segment(style="background-color:#{styling.tag_background_color}")
