--- a/client/home.jade
+++ b/client/home.jade
@@ -14,8 +14,8 @@ template(name='stack')
                 .ui.five.column.stackable.grid
                     each site_docs
                         a.center.aligned.column.goto_site(href="/site/#{api_site_parameter}")
-                            img.ui.fluid.image.site.zoomer.pointer(src=high_resolution_icon_url)
-                            img.ui.image.site.zoomer.pointer(src=logo_url)
+                            img.ui.fluid.image.mobile.hidden.site.zoomer(src=high_resolution_icon_url)
+                            img.ui.image.site.zoomer(src=logo_url)
                             // .header
                             //     |!{name}
                             // .description 
