first working tags page

--- a/client/nav.jade
+++ b/client/nav.jade
@@ -10,7 +10,7 @@ template(name='nav')
             //     i.large.stack.fire.icon
             a.icon.item.users(href='/users')
                 i.large.users.icon
-            a.icon.disabled.item.tags(href='/tags')
+            a.icon.item.tags(href='/tags')
                 i.large.tags.icon
             a.icon.disabled.item.badges(href='/badges')
                 i.large.certificate.icon
